# synapticx-coin

./: AUDITORIA_CORRECTIVA.md  AUDITORIA_CORRECTIVA_FASE_CLEANUP.md  AUDITORIA_EPISTEMOLOGICA.md  AUDITORIA_LIMPIEZA_FINAL.md  DESIGN_OUTPUT_COMMITMENT_VERIFICATION.md  FASE2_IMPLEMENTACION.md  FASE3_INVESTIGACION_EJECUTABLE.md  FASE4_AUDITORIA_FINAL_BRUTAL.md  FORENSIC_BASELINE_FASE1.md  README.md  pyproject.toml
.coinlab/: blocks.json  wallets.json
conformance/: README.md
conformance/invalid-cases/: input_inexistente.json
conformance/vectors/: README.md
docs/00_constitucion/: 00_taxonomia_epistemologica.md  01_invariantes_no_negociables.md  02_mapa_epistemologico_del_corpus.md  04_lo_que_si_se_sostiene.md  (+3 more)
product/: README.md
research/: README.md
resourses/: Roadmap.md  Taxonomía_obligatoria.txt  contexto.txt
scripts/: generate_conformance_fixture.py  generate_invalid_cases.py  run_demo.sh  run_research_simulations.sh  run_tests.sh
simulations/: README.md
tests/: test_atomicity.py  test_authorization.py  test_block_integrity.py  test_chain_pow.py  test_cli_smoke.py  test_commitment_uniqueness.py  test_config_compatibility_bug.py  test_config_constitutional.py  test_config_persistence.py  test_conformance.py  test_critical_validation.py  test_double_spend.py  test_fee_policy.py  test_invariants.py  test_mempool_tx_id_integrity.py  test_notes.py  test_nullifiers.py  test_output_commitment_semantics.py  test_restart_reload.py  test_short_reorg.py  test_supply_correctness.py  test_transactions.py  test_tx_payload_integrity.py  test_wallet_partial_state.py
(+84 files in other folders)
